--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -101,6 +101,13 @@
   font-weight: 500;
 }
 
+.logo-image {
+  height: 50px;
+  width: auto;
+  max-width: 200px;
+  object-fit: contain;
+}
+
 /* Navigation */
 .header-nav {
   display: flex;
